force-app/main/default/objects/Service_Case__c/Service_Case__c.object-meta.xml
<CustomObject>
    <label>Service Case</label>
    <nameField>
        <displayFormat>SC-{0000}</displayFormat>
        <label>Service Case ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Cases</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>