force-app/main/default/objects/Service_Case__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <defaultValue>&quot;In Progress&quot;</defaultValue>
    <label>Status</label>
    <length>24</length>
    <type>Text</type>
</CustomField>