force-app/main/default/objects/Service_Case__c/fields/Danger__c.field-meta.xml
<CustomField>
    <fullName>Danger__c</fullName>
    <formula>IF( Is_this_danger__c, IMAGE(&apos;/resource/1683116591000/Hazard_Icon&apos;,&quot;Danger&quot;,20,30),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Danger</label>
    <type>Text</type>
</CustomField>