force-app/main/default/objects/Service_Case__c/listViews/Close.listView-meta.xml
<ListView>
    <fullName>Close</fullName>
    <columns>Danger__c</columns>
    <columns>NAME</columns>
    <columns>Intake__c</columns>
    <columns>Head_of_Household__c</columns>
    <columns>Number_of_days__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Close</value>
    </filters>
    <label>Close</label>
</ListView>