force-app/main/default/objects/Service_Case__c/listViews/Pending.listView-meta.xml
<ListView>
    <fullName>Pending</fullName>
    <columns>Danger__c</columns>
    <columns>NAME</columns>
    <columns>Intake__c</columns>
    <columns>Head_of_Household__c</columns>
    <columns>Number_of_days__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_this_for_supervisor__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Pending</label>
</ListView>